objects/Client_Score__c.object
<CustomObject>
    <fields>
        <fullName>Client_Plan__c</fullName>
        <label>Client Plan</label>
        <referenceTo>Client_Plan__c</referenceTo>
        <relationshipLabel>Client Scores</relationshipLabel>
        <relationshipName>Client_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Is_Strength__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Strength</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score_Type__c</fullName>
        <label>Score Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Strength</fullName>
                </value>
                <value>
                    <fullName>Threat</fullName>
                </value>
                <value>
                    <fullName>Weakness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Client Score</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>